# Citadel.WebApi/Routes/Endpoints/Resources/Networks/CreateNetworkView.cs
@@ -1,0 +1,7 @@
+﻿namespace WebApi.Routes.Endpoints.Resources.Networks;
+
+/// <summary>
+/// 
+/// </summary>
+/// <param name="Id">Network Id</param>
+public sealed record CreateNetworkView(string Id);
